--- a/scss/layout/_cell.scss
+++ b/scss/layout/_cell.scss
@@ -28,7 +28,7 @@
         margin-left: 245px;
     }
     .grid{
-        margin-right: -356px;
+        margin-right: -314px;
     }
     .main{
         margin-right: -220px;
@@ -75,6 +75,14 @@
         width: 850px;
         height: 700px;
         margin-left: 340px;
+    }
+    .trabalho{
+        margin-left: 180px; 
+    }
+    .info{
+        margin-left: 50px;
+        width: 700px;
+        height: 650px;
     }
     }
     
