--- a/scss/layout/_desktop.scss
+++ b/scss/layout/_desktop.scss
@@ -1,3 +1,21 @@
+@media(max-width: 1440px){
+.color{
+    .main{
+        margin-left: 600px;
+    }
+}
+.info{
+    margin-left: 250px;
+}
+.prices{
+    margin-left: 540px;
+}
+.content-card{
+    margin-left: 500px;
+}
+}
+
+
 @media(max-width: 1024px){
     .contactoa{
         width: 429px;
