--- a/scss/layout/_tablet.scss
+++ b/scss/layout/_tablet.scss
@@ -40,10 +40,11 @@
     text-align: center;
     }
     .trabalho{
-        margin-left: 30px;
+        margin-left: 170px;
+        margin-top: 20px;
     }
     .prices{
-        margin-left: 220px;
+        margin-left: 180px;
     }
     .buttons{
         margin-left: -600px;
@@ -55,7 +56,7 @@
         }
     }
     .buttons{
-        margin-right: 420px;
+        margin-left: 20px;
     }
     .derecha{
         margin-bottom: 400px;
@@ -67,7 +68,9 @@
     .info{
         width: 600px;
         height: 450px;
+        margin-left: 100px;
     }
+
     }
 
     
